--- a/server/package.json
+++ b/server/package.json
@@ -16,15 +16,20 @@
     "@babel/runtime": "^7.4.4",
     "bluebird": "^3.5.1",
     "dotenv": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.2",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
+    "koa-passport": "^4.1.3",
     "koa-router": "^7.2.1",
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.13",
     "mailgun-js": "^0.22.0",
     "moment": "^2.18.1",
+    "mongoose": "^5.9.10",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3",
     "socket.io-redis": "^5.2.0",
