--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "redis": "^2.8.0",
     "socket.io": "^2.0.3",
     "socket.io-redis": "^5.2.0",
+    "socketio-jwt": "^4.5.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
