--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.9.10",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-router-redux": "^4.0.8",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3",
     "socket.io-redis": "^5.2.0",
